fix delete operation + fix iteration over items on underlying index + fix simple querying + remove fk from cart item